--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
             <input type="range" id="jsRange" min="0.1" max="15" value="7.5" step="0.1" />
         </div>
         <div class="controls_btns">
-            <button id="jsMode">Fill all</button>
-            <button id="jsMode2">Fill</button>
+            <button id="jsMode">Fill</button>
             <button id="jsSave">Save</button></div>
         <div class="controls_colors" id="jsColors">
             <div class="controls_color jsColor" style="background-color: #2c2c2c;"></div>
